@@ -1,3 +1,8 @@
+2006-04-30  James Turner  <james@worldforge.org>
+
+	* Eris/Task.h, Eris/Task.cpp: when a task is deleted, force it to be
+	  removed from the prediction set.
+
 2006-04-28  James Turner  <james@worldforge.org>
 
 	* Eris/Task.h: missing newline at end of file for Loooooooonix.
